[gd_scene load_steps=19 format=3 uid="uid://bxo4v6la8agb7"]

[ext_resource type="Script" path="res://scripts/flying_enemy.gd" id="1_y1bx2"]
[ext_resource type="PackedScene" uid="uid://dv2gcdbr10esg" path="res://scenes/game_objects/EnemyBullet.tscn" id="2_rl05j"]
[ext_resource type="Texture2D" uid="uid://ebbdxm0skabv" path="res://assets/sprites/characters/wormthing_fly.png" id="3_66a71"]
[ext_resource type="Texture2D" uid="uid://bcwqd7x0k8lwj" path="res://icon.svg" id="3_d81is"]
[ext_resource type="PackedScene" uid="uid://bl8sc7pg8bw74" path="res://scenes/game_objects/HealthManager.tscn" id="4_s0q11"]
[ext_resource type="PackedScene" uid="uid://88peymj2jp4v" path="res://assets/sounds/Enemy/EnemyDamageSound.tscn" id="6_xaxsq"]
[ext_resource type="PackedScene" uid="uid://d5fq1ifpmpy2" path="res://assets/sounds/Enemy/FlyEnemyShoot.tscn" id="7_xb47n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ox2lr"]
atlas = ExtResource("3_66a71")
region = Rect2(0, 0, 562, 418)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1451"]
atlas = ExtResource("3_66a71")
region = Rect2(562, 0, 562, 418)

[sub_resource type="AtlasTexture" id="AtlasTexture_osrwk"]
atlas = ExtResource("3_66a71")
region = Rect2(0, 418, 562, 418)

[sub_resource type="AtlasTexture" id="AtlasTexture_xk8bb"]
atlas = ExtResource("3_66a71")
region = Rect2(562, 0, 562, 418)

[sub_resource type="SpriteFrames" id="SpriteFrames_yim1k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox2lr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1451")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_osrwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xk8bb")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0j1s4"]
size = Vector2(140, 242.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jo2u5"]
size = Vector2(176, 291)

[sub_resource type="Animation" id="Animation_2wtql"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_wdjan"]
resource_name = "damage"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.02, 0.02, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ep2y5"]
resource_name = "spawn"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.733333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ofj0d"]
_data = {
"RESET": SubResource("Animation_2wtql"),
"damage": SubResource("Animation_wdjan"),
"spawn": SubResource("Animation_ep2y5")
}

[node name="FlyingEnemy" type="CharacterBody2D"]
modulate = Color(1, 1, 1, 0)
collision_mask = 3
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_y1bx2")
enemy_bullet_scene = ExtResource("2_rl05j")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 50
sprite_frames = SubResource("SpriteFrames_yim1k")
animation = &"walk"
autoplay = "walk"
frame_progress = 0.784245

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.111962, 0.438077, 0.371136, 1)
z_index = 50
texture = ExtResource("3_d81is")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(13, 28.625)
shape = SubResource("RectangleShape2D_0j1s4")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(15, 28.5)
shape = SubResource("RectangleShape2D_jo2u5")

[node name="HealthManager" parent="." instance=ExtResource("4_s0q11")]

[node name="EnemyHit" parent="." instance=ExtResource("6_xaxsq")]

[node name="FlyEnemyShoot" parent="." instance=ExtResource("7_xb47n")]
volume_db = -8.0
bus = &"sfx"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ofj0d")
}

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entererd"]
[connection signal="died" from="HealthManager" to="." method="die"]
